--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -2,6 +2,10 @@
     text-decoration-line: none;
     color: black;
 
+    padding: 0 1rem;
+
+    margin: 1rem 0;
+
     &__img {
         width: 100%;
         height: 200px;
