--- a/src/routes/ProductPage/ProductPage.module.scss
+++ b/src/routes/ProductPage/ProductPage.module.scss
@@ -1,2 +1,34 @@
 .ProductPage {
+    &__container {
+        min-height: 30rem;
+
+        @media screen and (min-width: 768px) {
+            display: grid;
+            grid-template-columns: 3fr 2fr;
+        }
+    }
+
+    &__image {
+        img,
+        .ProductPage__imagePlaceholder {
+            width: 100%;
+            height: 100%;
+            max-height: 30rem;
+            object-fit: contain;
+        }
+    }
+
+    &__info {
+    }
+
+    &__price {
+        font-size: 1.5rem;
+        font-weight: bold;
+        color: #333;
+    }
+
+    &__title {
+        font-size: 2rem;
+        font-style: italic;
+    }
 }
