--- a/src/components/CardContainer/CardContainer.module.scss
+++ b/src/components/CardContainer/CardContainer.module.scss
@@ -6,7 +6,7 @@
     max-width: 67.5rem;
 
     & > * {
-        flex-basis: 20rem;
+        flex-basis: 250px;
         flex-shrink: 0;
         flex-grow: 0;
     }
