--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -7,8 +7,8 @@
     margin: 1rem 0;
 
     &__img {
-        width: 100%;
-        height: 200px;
+        width: min(100%, 250px);
+        height: 250px;
         object-fit: contain;
         object-position: center;
     }
