--- a/src/routes/ProductPage/ProductPage.module.scss
+++ b/src/routes/ProductPage/ProductPage.module.scss
@@ -4,7 +4,7 @@
 
         @media screen and (min-width: 768px) {
             display: grid;
-            grid-template-columns: 3fr 2fr;
+            grid-template-columns: 1fr 1fr;
         }
     }
 
@@ -13,22 +13,43 @@
         .ProductPage__imagePlaceholder {
             width: 100%;
             height: 100%;
-            max-height: 30rem;
+            max-width: 30rem;
             object-fit: contain;
+            object-position: top;
+            margin: 0 auto;
+
+            @media screen and (min-width: 768px) {
+                margin: 0 0 auto auto;
+            }
         }
     }
 
     &__info {
+        max-width: 30rem;
+        margin: 0 auto;
+
+        @media screen and (min-width: 768px) {
+            max-width: none;
+            width: 100%;
+            margin: 0 0;
+            padding-left: 2rem;
+        }
     }
 
     &__price {
         font-size: 1.5rem;
         font-weight: bold;
         color: #333;
+        margin-bottom: 1rem;
     }
 
     &__title {
         font-size: 2rem;
         font-style: italic;
+        margin-bottom: 3rem;
+    }
+
+    &__desc {
+        margin-bottom: 2rem;
     }
 }
