--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -1,4 +1,7 @@
 .NavBar {
+    background-color: rgba(240, 240, 240, 1);
+    padding: 2rem 1rem;
+
     a {
         color: black;
         text-decoration: none;
