--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -8,57 +8,70 @@
         flex-wrap: nowrap;
         overflow: hidden;
     }
+}
 
-    .CarouselItem {
-        width: 100%;
+.CarouselItem {
+    width: 100%;
+    position: relative;
+
+    flex-basis: 100%;
+    flex-shrink: 0;
+
+    // change height for mobile vs desktop
+    height: 35rem;
+
+    @media screen and (min-width: 506px) {
         height: 20rem;
+    }
+
+    a {
+        color: white;
+        text-decoration: none;
+        text-align: left;
+    }
+
+    &__image {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        object-fit: cover;
+        z-index: 0;
+        filter: brightness(0.5);
+    }
+
+    &__text {
+        box-sizing: border-box;
+
         position: relative;
+        z-index: 10;
 
-        flex-basis: 100%;
-        flex-shrink: 0;
+        width: 100%;
+        height: 100%;
 
-        a {
-            color: white;
-            text-decoration: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+
+        padding: 1rem;
+
+        @media screen and (min-width: 506px) {
+            text-align: left;
+            padding-left: min(10%, 7rem);
         }
 
-        &__image {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            object-fit: cover;
-            z-index: 0;
-            filter: brightness(0.5);
+        h3 {
+            font-style: italic;
+            font-size: 3rem;
+            font-weight: 900;
         }
 
-        &__text {
-            box-sizing: border-box;
-
-            position: relative;
-            z-index: 10;
-
-            width: 100%;
-            height: 100%;
-
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-
-            padding-left: 7rem;
-
-            h3 {
-                font-style: italic;
-                font-size: 3rem;
-                font-weight: 900;
-            }
-
-            p {
-                font-family: 'Plus Jakarta Sans';
-                font-size: 1.5rem;
-                font-weight: 300;
-            }
+        p {
+            font-family: 'Plus Jakarta Sans';
+            font-size: 1.5rem;
+            font-weight: 300;
         }
     }
 }
