multiple categories added: home page with links to film and camears added navbar added for navigation breadcrumbs added in the product pages fixed some issues with carousel placeholders

--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -11,6 +11,9 @@
         height: 250px;
         object-fit: contain;
         object-position: center;
+
+        // add slight filter to see boxes
+        filter: brightness(0.92);
     }
 
     h3 {
