--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -2,31 +2,19 @@
     width: 100%;
     background-color: #2f2f2f;
 
+    z-index: 100;
+
     &__container {
         display: flex;
         justify-content: space-between;
         max-width: 67.5rem;
         margin: auto;
+        padding: 0 1rem;
     }
 
     &__icon {
         width: 4rem;
         margin: 1rem 0;
         filter: invert(1);
-    }
-
-    ul {
-        display: flex;
-        li {
-            list-style-type: none;
-            margin: auto 2rem;
-            a {
-                color: white;
-                text-decoration: none;
-                font-family: 'Plus Jakarta Sans';
-                font-size: 1.5rem;
-                font-weight: 700;
-            }
-        }
     }
 }
