--- a/src/routes/ProductPage/ProductPage.module.scss
+++ b/src/routes/ProductPage/ProductPage.module.scss
@@ -54,7 +54,7 @@
         font-size: 1.5rem;
         font-weight: bold;
         color: #333;
-        margin-bottom: 4rem;
+        margin-bottom: 2rem;
     }
 
     &__title {
@@ -65,5 +65,9 @@
 
     &__desc {
         margin-bottom: 2rem;
+
+        p {
+            margin-bottom: 0.5rem;
+        }
     }
 }
