added full favourites functionality in a custom hook added background images to home page added faved icon to product cards using dropdown navigation now closes it automatically

--- a/src/components/CardContainer/CardContainer.module.scss
+++ b/src/components/CardContainer/CardContainer.module.scss
@@ -10,4 +10,13 @@
         flex-shrink: 0;
         flex-grow: 0;
     }
+
+    &__placeholder {
+        height: 10rem;
+        display: grid;
+        place-content: center;
+        p {
+            font-size: 1.25rem;
+        }
+    }
 }
