--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -2,15 +2,20 @@
     text-decoration-line: none;
     color: black;
 
-    padding: 0 1rem;
+    padding: 1rem;
 
-    margin: 1rem 0;
+    margin: 1rem 1rem;
 
-    position: relative;
-
-    &__img {
+    // image container holds image, skeleton, overlay, and favourited button
+    &__imageContainer {
+        position: relative;
         width: min(100%, 250px);
         height: 250px;
+    }
+
+    &__img {
+        width: 100%;
+        height: 100%;
         object-fit: contain;
         object-position: center;
 
@@ -18,6 +23,7 @@
         filter: brightness(0.92);
     }
 
+    // out of stock overlay
     &__OutOfStock {
         background-color: rgba(white, 0.7);
         background: radial-gradient(
@@ -34,10 +40,29 @@
 
         position: absolute;
         top: 0;
-        left: 1rem;
+        left: 0;
+    }
+
+    // favIcon styling
+    &__favIcon {
+        width: 2rem;
+
+        position: absolute;
+        bottom: 1rem;
+        right: 1rem;
     }
 
     h3 {
+        margin-top: 1rem;
+        margin-bottom: 0.5rem;
         font-style: italic;
+    }
+
+    // for the hover styling below
+    transition: background-color 50ms;
+
+    // on hover darken background slightly
+    &:hover {
+        background-color: #ededed;
     }
 }
