--- a/src/routes/ProductPage/ProductPage.module.scss
+++ b/src/routes/ProductPage/ProductPage.module.scss
@@ -70,4 +70,11 @@
             margin-bottom: 0.5rem;
         }
     }
+
+    &__favButton {
+        background-color: white;
+        border: 1px solid rgb(150, 150, 150);
+        margin: 0 1rem 2rem 0;
+        padding: 1rem;
+    }
 }
