--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -32,13 +32,26 @@
 
     &__image {
         position: absolute;
+
         width: 100%;
         height: 100%;
+
         top: 0;
         left: 0;
+
         object-fit: cover;
+
         z-index: 0;
+
         filter: brightness(0.5);
+        transition: filter 50ms;
+    }
+
+    // on hover darken image
+    &:hover {
+        .CarouselItem__image {
+            filter: brightness(0.3);
+        }
     }
 
     &__text {
