--- a/src/routes/HomePage/HomePage.module.scss
+++ b/src/routes/HomePage/HomePage.module.scss
@@ -28,9 +28,33 @@
         color: white;
         text-decoration: none;
 
+        // position relative necessary for absPos image
+        position: relative;
+
         h2 {
             font-size: 2rem;
             font-style: italic;
+            z-index: 10;
+        }
+
+        // convert inline image to background image
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+
+            position: absolute;
+            z-index: 1;
+
+            filter: brightness(0.5);
+            transition: filter 50ms;
+        }
+
+        // on hover darken the image
+        &:hover {
+            img {
+                filter: brightness(0.2);
+            }
         }
     }
 }
