--- a/src/routes/HomePage/HomePage.module.scss
+++ b/src/routes/HomePage/HomePage.module.scss
@@ -57,4 +57,28 @@
             }
         }
     }
+
+    &__favouritesSection {
+        position: relative;
+    }
+
+    &__clearFavourites {
+        display: block;
+        box-sizing: border-box;
+
+        padding: 0.5rem;
+        background-color: transparent;
+        border: none;
+        border: 2px solid black;
+
+        cursor: pointer;
+
+        position: absolute;
+        right: 0;
+        top: 0;
+
+        &:hover {
+            background-color: #f1f1f1;
+        }
+    }
 }
