added quantity input feature on the product page

--- a/src/routes/ProductPage/ProductPage.module.scss
+++ b/src/routes/ProductPage/ProductPage.module.scss
@@ -71,6 +71,19 @@
         }
     }
 
+    label {
+        display: block;
+    }
+
+    &__quantityInput {
+        display: block;
+        box-sizing: border-box;
+        font-size: 1rem;
+        height: 3rem;
+        padding: 0.5rem;
+        width: 6rem;
+    }
+
     &__favButton {
         background-color: white;
         border: 1px solid rgb(150, 150, 150);
