--- a/src/components/QuantityInput/QuantityInput.module.scss
+++ b/src/components/QuantityInput/QuantityInput.module.scss
@@ -1,41 +1,68 @@
 .QuantityInput {
-    display: grid;
-    grid-template-columns: 2.5rem 5rem 2.5rem;
-    grid-auto-rows: 2.5rem;
-    max-width: 6rem;
-
+    display: flex;
+    justify-content: flex-start;
+    gap: 2rem;
+    align-items: center;
+    align-content: center;
     margin-bottom: 2rem;
 
-    button {
-        width: 100%;
-        box-sizing: border-box;
+    &__inputContainer {
+        display: grid;
+        grid-template-columns: 2.5rem 5rem 2.5rem;
+        grid-template-rows: 2.5rem;
+        max-width: 6rem;
 
-        img {
-            width: 1rem;
-        }
+        button {
+            width: 100%;
+            box-sizing: border-box;
 
-        &:first-of-type {
+            border: 1px solid rgba(#000, 0.5);
+            border-radius: 0;
+
+            background-color: #f4f4f4;
+
+            // click styling
+            &:active {
+                background-color: #eee;
+            }
+
             img {
-                transform: rotate(90deg);
+                width: 1rem;
+            }
+
+            // left button
+            &:first-of-type {
+                border-right: none;
+                border-radius: 8px 0 0 8px;
+
+                img {
+                    transform: rotate(90deg);
+                }
+            }
+
+            // right button
+            &:last-of-type {
+                border-left: none;
+                border-radius: 0 8px 8px 0;
+
+                img {
+                    transform: rotate(-90deg);
+                }
             }
         }
 
-        &:last-of-type {
-            img {
-                transform: rotate(-90deg);
-            }
+        input {
+            text-align: center;
+            font-size: 1.2rem;
+            border: none;
+            border: 1px solid rgba(#000, 0.5);
+            border-radius: 0;
         }
-    }
 
-    input {
-        text-align: center;
-        font-size: 1.2rem;
-        border-radius: none;
-    }
-
-    input[type='number']::-webkit-inner-spin-button,
-    input[type='number']::-webkit-outer-spin-button {
-        -webkit-appearance: none;
-        margin: 0;
+        input[type='number']::-webkit-inner-spin-button,
+        input[type='number']::-webkit-outer-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
     }
 }
