--- a/src/components/QuantityInput/QuantityInput.module.scss
+++ b/src/components/QuantityInput/QuantityInput.module.scss
@@ -1,15 +1,18 @@
 .QuantityInput {
     display: flex;
     justify-content: flex-start;
-    gap: 2rem;
+
     align-items: center;
     align-content: center;
+
+    column-gap: 2rem;
+    row-gap: 1rem;
+    flex-wrap: wrap;
 
     &__inputContainer {
         display: grid;
         grid-template-columns: 2.5rem 5rem 2.5rem;
         grid-template-rows: 2.5rem;
-        max-width: 6rem;
 
         button {
             width: 100%;
