Semantic pass: index.html Changed favicon

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -15,6 +15,9 @@
     &__icon {
         width: 4rem;
         margin: 1rem 0;
-        filter: invert(1);
+
+        &Inverted {
+            filter: invert(1);
+        }
     }
 }
